@@ -12,3 +12,4 @@ _None_
 * Fixed: Use GraphQL for tags/categories (Fixes #1340)
 * Added: Separate TV4 Group channel for TV4play.se (Fixes# 965)
 * Fixed: Nickelodeon did not list (Fixes #1412)
+* Added: 'Latest news' option to SVT
